[package]
name = "lain"
version = "0.1.0"
authors = ["Erin <erin@hashbang.sh>"]

[dependencies]
log = "0.3"
env_logger = "0.4"
dotenv = "0.10"

toml = "0.4"
serde = "1.0"
serde_derive = "1.0"

redis = "0.8"

[dependencies.serenity]
version = "0.2.0"
features = ["cache"]

[dependencies.diesel]
version = "0.12.1"
features = ["postgres"]

[dependencies.diesel_codegen]
version = "0.12.0"
features = ["postgres"]
